@@ -85,6 +85,8 @@
                             <finalName>shade-test</finalName>
                             <artifactSet>
                                 <excludes>
+                                    <exclude>**/module-info.java</exclude>
+                                    <exclude>**/module-info.class</exclude>
                                     <exclude>module-info.java</exclude>
                                     <exclude>module-info.class</exclude>
                                     <exclude>org.openjfx:javafx-base</exclude>
@@ -171,6 +173,34 @@
                                         <arg>--main-class</arg>
                                         <arg>com.doublerobot.HelloWorld</arg>
                                         <arg>${project.build.directory}/classes/module-info.class</arg>
+                                    </args>
+                                </configuration>
+                            </execution>
+                            <execution>
+                                <id>build-installers</id>
+                                <phase>package</phase>
+                                <goals>
+                                    <goal>java-tool</goal>
+                                </goals>
+                                <configuration>
+                                    <toolName>jpackage</toolName>
+                                    <args>
+                                        <arg>--jlink-options</arg>
+                                        <arg>--strip-native-commands --strip-debug --no-header-files --no-man-pages
+                                            --compress=2
+                                        </arg>
+                                        <arg>--name</arg>
+                                        <arg>TestApp</arg>
+                                        <arg>--icon</arg>
+                                        <arg>${project.basedir}/app-icon.icns</arg>
+                                        <arg>--module-path</arg>
+                                        <arg>
+                                            ${java.home}/jmods/:${project.build.directory}:${project.basedir}/javafx-jmods-15.0.1/
+                                        </arg>
+                                        <arg>--add-modules</arg>
+                                        <arg>shade.test,javafx.base,javafx.controls,javafx.graphics,java.logging</arg>
+                                        <arg>-m</arg>
+                                        <arg>shade.test/com.doublerobot.HelloWorld</arg>
                                     </args>
                                 </configuration>
                             </execution>
